--- a/src/props/AboutCovid19.css
+++ b/src/props/AboutCovid19.css
@@ -65,3 +65,35 @@ justify-content: space-around;
 .part3{
     background-image: url('./images/covid-image.png');
 }
+
+.videos{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.data{
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+}
+
+.info{
+    margin-top: 30px;
+}
+
+.dmv{
+    display: flex;
+    margin: auto;
+    width: 400px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.title{
+    display: flex;
+    margin: auto;
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
