--- a/src/props/AboutCovid19.css
+++ b/src/props/AboutCovid19.css
@@ -1,4 +1,4 @@
-.boutMain{
+.AboutMain{
     background-color: white;
     color: black;
     padding: 10px;
@@ -21,12 +21,8 @@
     padding-top: 10px;
     background-color: #1abc9c;
     color: #fff;
+    margin-bottom: 10px;
 }
-
-.text > p {  
-    font-size: 20px;
-}
-
 
 .img-v {
   height: 100px;
@@ -38,6 +34,7 @@
     transition: 2s all;
     text-align: center;
     margin-bottom: 40px;
+    color: #fff;
   }
 
 .spaced {
@@ -45,17 +42,15 @@
 }
 
 .icons {
-margin-top: 2rem;
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
 }
 
-.advice {
-    margin: 1rem;
-    transition: 0.5s all;
-    text-align: center;
-    animation: anim 2s forwards;
+.icons .advice > h3 {
+    color: #fff;
 }
 
 .move-right{
@@ -94,6 +89,6 @@ justify-content: space-around;
 .title{
     display: flex;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 40px;
     margin-bottom: 20px;
 }
